<resources>
    <string name="app_name">Android Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="userId">User ID :</string>
    <string name="userName">User Name :</string>
    <string name="userEmail">User Email :</string>
    <string name="userNull"> </string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_activity">Hello second activity</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>